--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="nav-right">
             <a href="./assets/Ziyang.pdf" target="_blank">CV</a>
-+           <a href="./assets/research_statement_Ziyang.pdf" target="_blank">Personal Statement</a>
+            <a href="./assets/research_statement_Ziyang.pdf" target="_blank" class="statement">Personal Statement</a>
         </div>
     </nav>
 
@@ -25,15 +25,45 @@
             <div class="profile-image">
                 <img src="IMG_myself.JPG" alt="Your Photo">
             </div>
-            <h2>ZiyangZhou</h2>
-            <p class="title">22-26 undergraduate student</p>
-            <p class="university">XJTLU</p>
-            <p class="email">Ziyang.Zhou22@student.xjtlu.edu.cn</p>
+            <div class="name-container">
+                <h2>ZiyangZhou</h2>
+                <p class="english-name">Deric</p>
+            </div>
+            <div class="profile-info">
+                <p class="graduation">26FALL</p>
+                <div class="university-info">
+                    <span class="university-icon">🎓</span>
+                    <p class="university">Xi'an Jiaotong-Liverpool University</p>
+                </div>
+                <div class="email-container">
+                    <span class="email-icon">📧</span>
+                    <a href="mailto:Ziyang.Zhou22@student.xjtlu.edu.cn" class="email">Ziyang.Zhou22@student.xjtlu.edu.cn</a>
+                </div>
+            </div>
             <!-- 社交媒体链接 -->
             <div class="social-links">
                 <a href="https://github.com/Azhou0/" class="github" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/azderic/" class="LinkedIn" target="_blank">LinkedIn</a>
-                <a href="path/to/your/cv.pdf" class="cv" target="_blank">CV</a>
+            </div>
+
+            <!-- 兴趣爱好 -->
+            <div class="interests-section">
+                <div class="interest-item">
+                    <span>🏋️‍♂️</span>
+                    <p>Fitness</p>
+                </div>
+                <div class="interest-item">
+                    <span>🎵</span>
+                    <p>Music</p>
+                </div>
+                <div class="interest-item">
+                    <span>🎬</span>
+                    <p>Movies</p>
+                </div>
+                <div class="interest-item">
+                    <span>✈️</span>
+                    <p>Travel</p>
+                </div>
             </div>
         </div>
 
@@ -41,20 +71,16 @@
         <div class="content-section">
             <section id="about">
                 <h2>About Me</h2>
-                <p>I am a 26FALL undergraduate student at XJTLU, major in Information and Computer Science. I am interested in the field of Audio, LLM, NLP. I like to explore the cutting-edge knowledge of technology, firmly believe that AI will change society and life in the near future, and hope to witness it with like-minded people. I also participated in many club activities in college, which cultivated my leadership and aesthetic abilities, and I was involved in planning multiple events, which enhanced my organizational and planning skills.
+                <p>I am a senior undergraduate student at Xi'an Jiaotong-Liverpool University, majoring in Information and Computer Science, and will be pursuing graduate studies in Fall 2026. My research interests focus on Audio Processing, Large Language Models (LLM), and Natural Language Processing (NLP). I like to explore the cutting-edge knowledge of technology, firmly believe that AI will change society and life in the near future, and hope to witness it with like-minded people. I also participated in many club activities in college, which cultivated my leadership and aesthetic abilities, and I was involved in planning multiple events, which enhanced my organizational and planning skills.
                 </p>
                 
-                <!-- 研究陈述 -->
-                <h3>Research Statement</h3>
-                <p>My research interests lie at the intersection of Audio Processing, Natural Language Processing, and Large Language Models. I am particularly fascinated by the architectural innovations in these fields:
-                </p>
-                <ul>
-                    <li>In Audio Processing, I've worked with various models like HuBERT and explored different architectures for tasks such as accent classification and synthetic music detection.</li>
-                    <li>In the NLP domain, I'm learning and experimenting with transformer-based architectures and their applications in various language understanding tasks.</li>
-                    <li>For LLMs, I'm keeping up with the latest developments in models like GPT and their potential applications, while studying their underlying architectures and training methodologies.</li>
-                </ul>
-                <p>Through these explorations, I aim to develop a deep understanding of these interconnected fields and contribute to their advancement.</p>
-                
+                <!-- 出版物 -->
+                <h3>Publications</h3>
+                <div class="publication-item">
+                    <p class="coming-soon">🚀 Coming soon... (Still studying and preparing for some groundbreaking research!)</p>
+                    <p class="fun-note">Meanwhile, check out my projects below! 😉</p>
+                </div>
+
                 <!-- 研究兴趣 -->
                 <h3>Interests</h3>
                 <ul>
