Initial commit: Add personal homepage files

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="content-section">
             <section id="about">
                 <h2>About Me</h2>
-                <p>I am a senior undergraduate student at Xi'an Jiaotong-Liverpool University, majoring in Information and Computer Science, and will be pursuing graduate studies in Fall 2026. My research interests focus on Audio Processing, Large Language Models (LLM), and Natural Language Processing (NLP). I like to explore the cutting-edge knowledge of technology, firmly believe that AI will change society and life in the near future, and hope to witness it with like-minded people. I also participated in many club activities in college, which cultivated my leadership and aesthetic abilities, and I was involved in planning multiple events, which enhanced my organizational and planning skills.
+                <p>I am a senior undergraduate student at Xi'an Jiaotong-Liverpool University, majoring in Information and Computer Science, and will be pursuing graduate studies in Fall 2026. My research interests focus on Multimodal, Audio&Speech, Large Language Models (LLM), and Natural Language Processing (NLP). I like to explore the cutting-edge knowledge of technology, firmly believe that AI will change society and life in the near future, and hope to witness it with like-minded people. I also participated in many club activities in college, which cultivated my leadership and aesthetic abilities, and I was involved in planning multiple events, which enhanced my organizational and planning skills.
                 </p>
                 
                 <!-- 出版物 -->
@@ -88,6 +88,7 @@
                     <li>Machine Learning & Deep Learning</li>
                     <li>Natural Language Processing</li>
                     <li>LLM</li>
+                    <li>Multimodal</li>
                 </ul>
 
                 <!-- 教育经历 -->
@@ -98,10 +99,20 @@
                     <p>GPA: 3.7/4.0</p>
                 </div>
 
-               <!-- 经验 -->
-               <h3 id="experience">Experience</h3>
+               <!-- Experience -->
+            <h3 id="experience">Experience</h3>
+                <div class="experience-item">
+                    <h4>Acoustic Scene Classification</h4>
+                    <p class="time">Jan 2025 - Present | XJTLU</p>
+                    <ul>
+                        <li>Preparing for DCASE 2025 Challenge Task 1</li>
+                        <li>Research on acoustic scene classification using deep learning approaches</li>
+                        <li>Exploring various audio feature extraction and classification techniques</li>
+                    </ul>
+                </div>
+
                <div class="experience-item">
-                   <h4>Audio Project</h4>
+                   <h4>Accent Recognition</h4>
                    <p class="time">Sep 2024 - Jan 2025 | XJTLU</p>
                    <ul>
                        <li>Research on audio signal processing</li>
@@ -133,4 +144,4 @@
        </div>
     </main>
 </body>
-</html> 
+</html>
