--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>ZiyangZhou</h1>
         </div>
         <div class="nav-right">
-            <a href="./assets/Ziyang.pdf" target="_blank">CV</a>
+            <a href="./assets/Ziyang-2.pdf" target="_blank">CV</a>
             <a href="./assets/research_statement_Ziyang.pdf" target="_blank" class="statement">Personal Statement</a>
         </div>
     </nav>
@@ -127,6 +127,7 @@
                    <ul>
                        <li>Utilized Vision Transformer (ViT) for synthetic music identification</li>
                        <li>Worked with MFCCs for audio analysis</li>
+                       <li><a href="./assets/surfposter.jpg" target="_blank">View Project Poster <img src="./assets/surfposter.jpg" alt="Project Poster" style="width: 50px; height: auto; vertical-align: middle; margin-left: 5px; border-radius: 4px;"></a></li>
                    </ul>
                </div>
 
