更新个人主页

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                 <h3>Publications</h3>
                 <div class="publication-item">
                     <p class="coming-soon">🚀 Coming soon... (Still studying and preparing for some groundbreaking research!)</p>
-                    <p class="fun-note">Meanwhile, check out my projects below! 😉</p>
+                    <p class="fun-note">Meanwhile, check out my projects below! </p>
                 </div>
 
                 <!-- 研究兴趣 -->
                 <h3>Interests</h3>
                 <ul>
-                    <li>Audio Signal Processing</li>
+                    <li>Audio&Speech</li>
                     <li>Machine Learning & Deep Learning</li>
                     <li>Natural Language Processing</li>
                     <li>LLM</li>
@@ -106,7 +106,7 @@
                     <p class="time">Jan 2025 - Present | XJTLU</p>
                     <ul>
                         <li>Preparing for DCASE 2025 Challenge Task 1</li>
-                        <li>Research on acoustic scene classification using deep learning approaches</li>
+                        <li>Research on acoustic scene classification</li>
                         <li>Exploring various audio feature extraction and classification techniques</li>
                     </ul>
                 </div>
