Update profile photo to p1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- 左侧个人信息 -->
         <div class="profile-section">
             <div class="profile-image">
-                <img src="IMG_myself.JPG" alt="Your Photo">
+                <img src="p1.JPG" alt="Your Photo">
             </div>
             <div class="name-container">
                 <h2>ZiyangZhou</h2>
