更新网站样式和内容，添加新图片

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="graduation">26FALL</p>
                 <div class="university-info">
                     <span class="university-icon">🎓</span>
-                    <p class="university">Xi'an Jiaotong-Liverpool University</p>
+                    <p class="university"><a href="https://www.xjtlu.edu.cn/en" target="_blank">Xi'an Jiaotong-Liverpool University</a></p>
                 </div>
                 <div class="email-container">
                     <span class="email-icon">📧</span>
@@ -140,6 +140,14 @@
                <div class="achievement-item">
                    <h4>Mathematical Contest in Modeling (MCM/ICM)</h4>
                    <p>S Prize, January 2024</p>
+               </div>
+
+               <!-- More About Me -->
+               <h3 id="more-about-me">More About Me</h3>
+               <div class="more-about-me-item">
+                   <p>I have a deep passion for art and cinema, believing that great art can touch people's souls in ways technology alone cannot. My artistic journey includes studying traditional calligraphy and musical instruments, which has given me a profound appreciation for cultural heritage.</p>
+                   <p>I've had the privilege of working in film production as a sound assistant, an experience that allowed me to see how technical skills and artistic vision come together to create something meaningful. These experiences have shaped my perspective on how technology and art can complement each other.</p>
+                   <p>I value deep conversations and enjoy listening to others' thoughts and ideas. These exchanges often inspire me and broaden my understanding of the world. Looking forward, I aspire to make a positive impact on people's lives through my work, whether through technological innovation or artistic expression.</p>
                </div>
            </section>
        </div>
