--- a/index.html
+++ b/index.html
@@ -172,5 +172,9 @@
            </section>
        </div>
     </main>
+    
+    <!-- ClustrMaps访问统计 -->
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zuENtj_mtjF_P2bAiT_adkDPa9GPxevhZEupNUNXhX4&cl=ffffff&w=a"></script>
+    
 </body>
 </html>
