--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                     <p>Travel</p>
                 </div>
             </div>
+            
+            <!-- 访问统计地图 -->
+            <div class="visitor-map">
+                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zuENtj_mtjF_P2bAiT_adkDPa9GPxevhZEupNUNXhX4&cl=ffffff&w=200"></script>
+            </div>
         </div>
 
         <!-- 右侧内容区 -->
